# connectathon-2026-asignaciones

./: .env.example  README.md  create_sample_appointments.py  fhir_client.py  main.py  pyproject.toml  server.py
appointments-app/: package-lock.json  package.json
appointments-app/convex/: appointments.ts  patients.ts  schema.ts  sync.ts
appointments-app/convex/_generated/: api.d.ts
appointments-app/src/: App.tsx
appointments-app/src/components/: AppointmentSidebar.tsx  Calendar.tsx
