[project]
name = "connectathon-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "twilio>=9.9.1",
    "elevenlabs>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.21",
]

[dependency-groups]
dev = [
    "ipython>=9.9.0",
]
